[package]
name = "nidus-sqlx"
version.workspace = true
edition.workspace = true
description = "Official SQLx adapter primitives for Nidus, including pool registration and health checks."
readme = "../../README.md"
documentation = "https://docs.rs/nidus-sqlx"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
postgres = ["sqlx/postgres", "sqlx/tls-rustls-ring-native-roots"]
mysql = ["sqlx/mysql", "sqlx/tls-rustls-ring-native-roots"]
cockroach = ["postgres", "dep:tokio"]
sqlite = ["sqlx/sqlite"]
nidus-config = ["dep:nidus-config"]
health = ["dep:nidus-http"]
observability = ["dep:nidus-observability", "nidus-integrations/observability"]
dashboard = ["nidus-integrations/dashboard"]

[dependencies]
async-trait.workspace = true
nidus-core = { path = "../nidus-core", version = "1.0.15" }
nidus-config = { path = "../nidus-config", version = "1.0.15", optional = true }
nidus-http = { path = "../nidus-http", version = "1.0.15", optional = true }
nidus-integrations.workspace = true
nidus-observability = { path = "../nidus-observability", version = "1.0.15", optional = true }
fastrand.workspace = true
futures-util.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["time"] }

[dev-dependencies]
axum.workspace = true
nidus-config = { path = "../nidus-config", version = "1.0.15" }
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
tower.workspace = true
trybuild.workspace = true
