[package]
name = "nidus-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
nidus-config = { path = "../nidus-config", version = "0.1.0" }
nidus-core = { path = "../nidus-core", version = "0.1.0" }
nidus-http = { path = "../nidus-http", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
async-trait.workspace = true
