[package]
name = "nidus-testing"
version.workspace = true
edition.workspace = true
description = "Test application harness, request builders, response helpers, and provider overrides for Nidus."
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
nidus-config = { path = "../nidus-config", version = "1.0.0" }
nidus-core = { path = "../nidus-core", version = "1.0.0" }
nidus-http = { path = "../nidus-http", version = "1.0.0" }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
async-trait.workspace = true
