[package]
name = "nidus-validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
http.workspace = true
serde.workspace = true
thiserror.workspace = true
validator.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
