[package]
name = "nidus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
default = ["http", "config", "tracing"]
http = ["dep:nidus-http"]
config = ["dep:nidus-config"]
openapi = ["dep:nidus-openapi"]
validation = ["dep:nidus-validation"]
auth = ["dep:nidus-auth"]
events = ["dep:nidus-events"]
jobs = ["dep:nidus-jobs"]
testing = ["dep:nidus-testing"]
sqlx-postgres = ["dep:sqlx"]
tracing = []

[dependencies]
nidus-core = { path = "../nidus-core", version = "0.1.0" }
nidus-macros = { path = "../nidus-macros", version = "0.1.0" }
nidus-http = { path = "../nidus-http", version = "0.1.0", optional = true }
nidus-config = { path = "../nidus-config", version = "0.1.0", optional = true }
nidus-openapi = { path = "../nidus-openapi", version = "0.1.0", optional = true }
nidus-validation = { path = "../nidus-validation", version = "0.1.0", optional = true }
nidus-auth = { path = "../nidus-auth", version = "0.1.0", optional = true }
nidus-events = { path = "../nidus-events", version = "0.1.0", optional = true }
nidus-jobs = { path = "../nidus-jobs", version = "0.1.0", optional = true }
nidus-testing = { path = "../nidus-testing", version = "0.1.0", optional = true }
sqlx = { workspace = true, optional = true }
tokio.workspace = true
serde_json.workspace = true
utoipa.workspace = true

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
tower.workspace = true
trybuild.workspace = true
