[package]
name = "nidus-example-auth-api"
version = "1.0.14"
edition = "2024"
publish = false

[dependencies]
async-trait.workspace = true
axum.workspace = true
nidus = { package = "nidus-rs", path = "../../crates/nidus", version = "1.0.14", features = ["auth"] }
tokio.workspace = true

[dev-dependencies]
nidus-testing = { path = "../../crates/nidus-testing", version = "1.0.14" }
serde_json.workspace = true
