[package]
name = "nidus-example-dashboard-api"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
axum.workspace = true
nidus = { package = "nidus-rs", path = "../../crates/nidus", features = ["dashboard", "events", "http", "jobs"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
