[package]
name = "nidus-external-commerce"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
nidus = { package = "nidus-rs", version = "1.0.7", features = ["http", "observability"] }
nidus-cache = { version = "1.0.7", features = ["health", "observability"] }
nidus-sqlx = { version = "1.0.7", features = ["sqlite", "health", "observability"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
nidus-testing = "1.0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
